--- a/src/app/components/sidebar-manage/sidebar-manage.component.html
+++ b/src/app/components/sidebar-manage/sidebar-manage.component.html
@@ -11,10 +11,15 @@
            [routerLink]="['', { outlets: {primary: ['stats', network.id]} }]">
           <fa-icon [icon]="faInfo"></fa-icon>
         </a>
-        <a class="btn btn-sm btn-outline-success" role="button" data-toggle="tooltip"
+        <a class="btn btn-sm btn-outline-success mr-1" role="button" data-toggle="tooltip"
            placement="left" ngbTooltip="{{'SIDEBAR_MANAGE_TT_EDIT'|translate}}"
            [routerLink]="['', { outlets: {primary: ['graph', network.id], sidebar: ['edit', network.id]} }]">
           <fa-icon [icon]="faPaintBrush"></fa-icon>
+        </a>
+        <a class="btn btn-sm btn-outline-info" role="button" data-toggle="tooltip"
+           placement="left" ngbTooltip="{{'SIDEBAR_MANAGE_TT_DOWNLOAD'|translate}}"
+           (click)="downloadAsCx(network.id)">
+          <fa-icon [icon]="faFileDownload"></fa-icon>
         </a>
       </td>
     </tr>
