[DONE] file download from NDEx to local

--- a/src/app/components/sidebar-manage/sidebar-manage.component.html
+++ b/src/app/components/sidebar-manage/sidebar-manage.component.html
@@ -18,7 +18,7 @@
         </a>
         <a class="btn btn-sm btn-outline-info" role="button" data-toggle="tooltip"
            placement="left" ngbTooltip="{{'SIDEBAR_MANAGE_TT_DOWNLOAD'|translate}}"
-           (click)="downloadAsCx(network.id)">
+           (click)="reconvert(network.id)">
           <fa-icon [icon]="faFileDownload"></fa-icon>
         </a>
       </td>
